# mzpqnxow.sillylog

./: .gitattributes  .gitignore  .isort.cfg  .pylintrc  COPYING  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  pybuild  setup.cfg  setup.py  test.py
sillylog/: _version.py  log.py  util.py
