[metadata]
description = Python3 logging with per-level formatting and 2 additional log levels
maintainer = Adam Greene
maintainer_email = copyright@mzpqnxow.com
author = Adam Greene
author_email = copyright@mzpqnxow.com
url = https://github.com/mzpqnxow/mzpqnxow.pysillylog
requires-python = >=3.5
license-file = COPYING
license = BSD-3-Clause

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.5
install_requires = 

[versioneer]
VCS = git
style = pep440
versionfile_source = sillylog/_version.py
versionfile_build = sillylog/_version.py
tag_prefix = ''
parentdir_prefix = mzpqnxow.

[pycodestyle]
select = 
ignore = E501,W605

[yapf]
based_on_style = pep8
spaces_before_comment = 4
split_before_logical_operator = true

[flake8]
max-line-length = 140

[clean]
all = 1

[isort]
combine_as_imports = true
# force_alphabetical_sort = true
force_grid_wraps = true
force_single_line = false
force_sort_within_sections = true
force_to_top = true
import_heading_firstparty = first party
import_heading_stdlib = stdlib
import_heading_thirdparty = third party
include_trailing_comma = false
indent = 4
known_future_library = future
line_length = 45
multi_line_output = 3
not_skip = __init__.py
order_by_type = true
recursive = yes
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = packages/*,venv/*,build/*
use_parentheses = true
virtual_env = venv